Changelog
=========

1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0 (2014-08-26)
----------------

* Initial release.
  []